force-app/main/default/objects/ModApp__c/ModApp__c.object-meta.xml
<CustomObject>
    <label>ModApp</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ModApp</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>