force-app/main/default/objects/ModApp__c/fields/Actual__c.field-meta.xml
<CustomField>
    <fullName>Actual__c</fullName>
    <label>Actual</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>