force-app/main/default/objects/ModApp__c/fields/Eliminar__c.field-meta.xml
<CustomField>
    <fullName>Eliminar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eliminar</label>
    <type>Checkbox</type>
</CustomField>