force-app/main/default/objects/ModApp__c/fields/enviado__c.field-meta.xml
<CustomField>
    <fullName>enviado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>enviado</label>
    <type>Checkbox</type>
</CustomField>