force-app/main/default/objects/ModApp__c/fields/Original__c.field-meta.xml
<CustomField>
    <fullName>Original__c</fullName>
    <label>Original</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>