force-app/main/default/objects/ModApp__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Usuario__c</columns>
    <columns>Tipo__c</columns>
    <columns>enviado__c</columns>
    <columns>Comentarios__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>